@@ -14,6 +14,10 @@ Release 3.x (not scheduled yet)
     appropiately within non MDT-Eclipse distributions.
   - Adaptation of DataTypes is now supported.
   
+* Bug fixes on XML model instande adaptation
+  - XML files having a file name ending with .XML instead of .xml should now be 
+    imported appropriately as well.
+  
 * Bug fixes on OCL Parser/Editor
   - Parsing of recursively defined properties is now supported.
 
